# example_opencv

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  readme.md
include/: sifts.h
python/: display_lenna_sifts.py  display_sifts.py  display_sifts_from_file.py
release/: README.md  make_release.sh  release_data.json  upload_artifacts.sh
src/: CMakeLists.txt  cv_as_smart_pointer.cpp  display_image.cpp  display_sifts.cpp  display_sifts.py  flann_searcher.cpp  sifts.cpp  sifts.hpp
src/apps/: CMakeLists.txt  display_sifts.cpp  flann_searcher.cpp
src/lib/: CMakeLists.txt
src/lib/sift_compute/: CMakeLists.txt  sifts.cpp  sifts.hpp
